--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                         <h3 class="project-title">Application Usage Tracker</h3>
                         <div class="video-container">
                             <video controls autoplay loop muted>
-                                <source src="applicationtracker.mp4" type="video/mp4">
+                                <source src="/applicationtracker.mp4" type="video/mp4">
                                 Your browser does not support the video tag.
                             </video>
                         </div>
