Your commit message

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </header>
     <main>
         <section id="about" class="section">
-            <h2>About Me</h2>
+            <h1></h1>
             <p>My name is Kyle De Los Santos and I'm currently a junior at Rutgers University double majoring in Finance and BAIT (Business Analytics & Information Technology). As for my background in finance, I currently hold the SIE and am currently a candidate for the CFA level 1 exam. I also have experience in equity research report creation, financial modeling, financial statement analysis, and pitch deck creation. Within tech, my primary stack is JavaScript, Python, React, Node.js, HTML/CSS, with some experience with SQL, R, and Excel VBA.</p>
         </section>
 
@@ -144,28 +144,27 @@
         </section>
 
         <section id="portfolio" class="section">
-            <div class="project-container">
-                <section id="portfolio" class="section">
-                    <h2>Portfolio</h2>
-                        <h3 class="project-title">Application Usage Tracker</h3>
-                        <div class="video-container">
-                            <video controls autoplay loop muted>
-                                <source src="applicationtracker.mp4" type="video/mp4">
-                                Your browser does not support the video tag.
-                            </video>
+            <div class="portfolio">
+                <div class="project-container">
+                        <h2>Portfolio</h2>
+                            <h3 class="project-title"><a href="https://github.com/kyledls/desktop-application-tracker" target="_blank" rel="noopener noreferrer" style="text-decoration: none; color: rgb(51, 116, 160);">Application Usage Tracker</a></h3>
+                            <div class="video-container">
+                                <video controls autoplay loop muted>
+                                    <source src="applicationtracker.mp4" type="video/mp4">
+                                    Your browser does not support the video tag.
+                                </video>
+                            </div>
+                            <div class="tech-stack">
+                                <span class="tech">Stack: </span>
+                                <span class="tech">HTML |</span>
+                                <span class="tech">CSS |</span>
+                                <span class="tech">React |</span>
+                                <span class="tech">JavaScript |</span>
+                                <span class="tech">Electron |</span>
+                                <span class="tech">Node.js</span>
+                            </div>
+                            <p>WIP: Tracks the usage of applications on desktop.</p>
                         </div>
-                        <div class="tech-stack">
-                            <span class="tech">Stack: </span>
-                            <span class="tech">HTML |</span>
-                            <span class="tech">CSS |</span>
-                            <span class="tech">React |</span>
-                            <span class="tech">JavaScript |</span>
-                            <span class="tech">Electron |</span>
-                            <span class="tech">Node.js</span>
-                        </div>
-                        <p>WIP: Tracks the usage of applications on desktop.</p>
-                    </div>
-                </section>
             </div>
         </section>
 
