--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                             <h3 class="project-title"><a href="https://github.com/kyledls/desktop-application-tracker" target="_blank" rel="noopener noreferrer" style="text-decoration: none; color: rgb(51, 116, 160);">Application Usage Tracker</a></h3>
                             <div class="video-container">
                                 <video controls autoplay loop muted>
-                                    <source src="applicationtracker.mp4" type="video/mp4">
+                                    <source src="/ApplicationTracker.mp4" type="video/mp4">
                                     Your browser does not support the video tag.
                                 </video>
                             </div>
